feat: Add Kafka Connect Single Message Transformation
Fixes: #3232